--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items:center ;
-    padding: 42px;
+    padding: 40px 30px;
     width: 18%;
     height: 100vh;
     background: #1E1E1E;
@@ -29,7 +29,7 @@ nav ul li a{
 }
 nav ul li a img{
     margin-right: 12px;
-    padding: 6px;
+    padding: 8px;
 }
 
 .active{
@@ -38,4 +38,17 @@ nav ul li a img{
 .active img{
     background: var(--maincolor);
     border-radius: 100%;
+}
+.navbar .medsos{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar .medsos a img{
+    padding: 6px;
+    width: 30px;
+    background: #fff;
+    border-radius: 100%;
+    cursor: pointer;
 }
