--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ h2{
     font-size: 20px;
     line-height: 30px;
     color: #FFEAEA;
+    cursor: pointer;
 }
 .btn:hover{
     background: var(--maincolor2);
