--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 
-.about img{
+.about .user{
     width: 200px;
     height: 200px;
     margin: 30px 0 12px;
@@ -15,7 +15,6 @@
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
-    line-height: 48px;
 }
 .about p{
     text-align: center;
@@ -29,17 +28,17 @@
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 30px;
     color: var(--maincolor);
+}
+.medsos img{
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+    background: #C0C0C0;
+    object-fit: none;
+    margin-top: 18px;
 }
 .about .decoration{
     left: 160px;
     top: 680px;
-}
-.medsos{
-    margin-top: -60px;
-}
-.medsos img{
-    width: 24px;
-    margin-top: -24px;
 }
