--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@
 @import url(/assets/css/nav.css);
 @import url(/assets/css/about.css);
 @import url(/assets/css/skill.css);
+@import url(/assets/css/portofolio.css);
+@import url(/assets/css/footer.css);
 
 *{
     padding: 0;
