menambahkan portofolio/index.html dan contact/index.html

--- a/assets/css/portofolio.css
+++ b/assets/css/portofolio.css
@@ -26,3 +26,9 @@
     height: 220px;
     object-fit: cover;
 }
+
+.portofolio .btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
