--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 @import url(/assets/css/skill.css);
 @import url(/assets/css/portofolio.css);
 @import url(/assets/css/footer.css);
-
+@import url(/assets/css/contact.css);
 *{
     padding: 0;
     margin: 0;
